--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@material-ui/core": "^4.0.2",
     "classnames": "^2.2.6",
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-image-gallery": "^0.8.17",
     "react-redux": "^7.0.3",
